...
    <!-- Navigace -->
    <string name="nav_drawer_open">Open sidebar</string>
    <string name="nav_drawer_close">Close sidebar</string>
    <string name="nav_text_configurations">Configurations</string>
    <string name="nav_profiles">Output profiles</string>
    <string name="nav_text_profiles">Profily</string>
    <string name="nav_text_settings">Settings</string>
    <string name="nav_text_help">Help</string>
    <string name="nav_text_about">About</string>

    <!-- Položky menu -->
    <string name="action_connect">connect</string>
    <string name="action_disconnect">disconnect</string>
...

    <!-- Activity - configuration -->
    <string name="configuration_type_description">configuration type</string>
    <string name="configuration_type_led">configuration with leds</string>
    <string name="configuration_type_audio">configuration with audio</string>
    <string name="configuration_type_image">configuration with image</string>
    <string name="no_configuration_found">No configuration found.</string>
    <!-- Action mode akce -->
    <string name="action_duplicate">Duplicate</string>
    <string name="action_delete">Delete</string>
    <string name="action_rename">Rename</string>
    <string name="save_values">Save values</string>
    <string name="action_export">Export</string>
...
    <string name="activity_title_import_configuration">Import configuration</string>
    <string name="file_path">File path</string>
    <string name="import_failded">Import failed</string>

    <!-- Experimenty -->
    <string name="experiment_undefinded">Undefined</string>
    <string name="experiment_erp" translatable="false">ERP</string>
    <string name="experiment_fvep" translatable="false">f-VEP</string>
    <string name="experiment_tvep" translatable="false">t-VEP</string>
    <string name="experiment_cvep" translatable="false">c-VEP</string>
    <string name="experiment_rea" translatable="false">Reaction experiment</string>
    <string name="experiment_aut">Autostimulation</string>
    <string name="experiment_bio">Biosensor logger</string>
    <string-array name="experiment_array">
        <item>@string/experiment_erp</item>
        <item>@string/experiment_fvep</item>
        <item>@string/experiment_tvep</item>
...
