<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <import type="cz.zcu.fav.remotestimulatorcontrol.ui.configurations.ConfigurationBindings" />

        <import type="cz.zcu.fav.remotestimulatorcontrol.model.configuration.AConfiguration" />

        <import type="cz.zcu.fav.remotestimulatorcontrol.model.configuration.MediaType" />

        <variable
            name="configuration"
            type="AConfiguration" />

        <variable
            name="showExtension"
            type="android.databinding.ObservableBoolean" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/configuration_item"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/selection_indicator_state_list"
        android:clickable="true"
        android:padding="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_configuration_type"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@{configuration.configurationType}"
            android:gravity="center"
            android:text="@{configuration.configurationType}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:valid="@{configuration.valid}"
            tools:text="ERP"/>

        <TextView
            android:id="@+id/text_configuration_name"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@{configuration.name}"
            android:textSize="20sp"
            tools:text="Configuration name" />

        <TextView
            android:id="@+id/text_extension"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="@{configuration.metaData.extensionType.toString()}"
            android:textSize="20sp"
            android:visibility="@{showExtension ? View.VISIBLE : View.GONE}"
            tools:text="Extension" />

    </LinearLayout>
</layout>
