...
                android:id="@+id/recyclerViewConfigurations"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/textNoConfigurationFound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_configuration_found"
            android:visibility="@{isRecyclerViewEmpty ? View.VISIBLE : View.GONE}" />

...
